# telegram-sale-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
src/: main.py
src/config/: variables_config.py
src/controllers/: send_message.py
src/routes/: send_message.py
src/services/: bot_service.py  genai_service.py  telegram_bot_service.py
tests/: main.py
